2008-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* tests/check/gst/gstbuffer.c:
	* tests/check/pipelines/parse-launch.c:
	  Use HAVE_VALGRIND_H some more.

2008-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* scripts/cvs-update.sh:
	  Pass arguments to make.
	  Run autoregen.sh if Makefile is not there.

2008-06-20  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* gst/gstinfo.c:
	  Don't assume that <valgrind/valgrind.h> exists just because
	  the binary is there.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/check/Makefile.am:
	* tests/check/libs/test_transform.c: (gst_test_trans_base_init),
	(gst_test_trans_class_init), (gst_test_trans_init),
	(gst_test_trans_set_data), (result_sink_chain),
	(gst_test_trans_new), (gst_test_trans_free), (gst_test_trans_push),
	(gst_test_trans_pop):
	* tests/check/libs/transform1.c: (GST_START_TEST),
	(transform_ip_1), (set_caps_1), (gst_basetransform_suite):
	Add some test basetransform element and the beginnings of various
	unit tests for it.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* libs/gst/base/gsttypefindhelper.c: (helper_find_peek):
	Increase code readability.
	Don't try to compare buffer offsets when ther are invalid.

2008-06-20  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* docs/design/Makefile.am:
	  Dist some more design docs.

	* docs/random/moving-plugins:
	  Small addition: good plugins mustn't have functional code
	  within assertion macros.

2008-06-20  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/design/draft-framestep.txt:
	Some ideas about a framestep API

	* docs/design/part-element-transform.txt:
	Start design and use cases for basetransform in order to get it
	fixed soon.

2008-06-20  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gsttaglist.h:
	  In GST_TAG_ATTACHEMENT docs, mention that the file name needs to
	  be in UTF-8 encoding.
